--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,5 @@ youtube-transcript-api>=0.6.1
 uvicorn>=0.23.0
 streamlit>=1.28.0 
 supabase==2.17.0 
+python-dotenv>=1.0.0 
+beautifulsoup4>=4.13.0 
