🔒 SECURITY: Remove sensitive data from JSON files, use environment variables
CRITICAL SECURITY IMPROVEMENTS:
- ❌ Removed all config.json files with API keys and webhooks
- ✅ Migrated to secure environment variable system
- ✅ Updated .gitignore to prevent future credential exposure
- ✅ Created .env.template for deployment guidance
- ✅ Implemented secure ConfigService prioritizing env vars
- ✅ Added security migration script and verification

BREAKING CHANGE: Applications now require environment variables:
- OPENAI_API_KEY
- DISCORD_*_WEBHOOK URLs
- SUPABASE_URL and SUPABASE_KEY
- WEBHOOK_AUTH_TOKEN

This prevents accidental credential exposure in version control.

--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,24 @@ ehthumbs.db
 Thumbs.db
 
 # Local data
+# Debug files
+*/data/debug/
+**/debug/
+backend/data/debug/
 data/debug/
+
+# Sensitive configuration files
+*/data/config.json
+**/config.json
+backend/data/config.json
+frontend/data/config.json
+shared/data/config.json
+
+# Any files with credentials
+*secrets*
+*.env
+*.env.local
+*credentials*
 
 # Keep data directories but not large files
 data/transcripts/*.txt
