Production fixes and deployment improvements
- Fixed API endpoint mismatches between frontend and backend
- Corrected Procfile configurations for Railway deployment
- Updated requirements.txt with all necessary dependencies
- Enhanced Railway configuration with proper Streamlit flags
- Improved error handling and fallback mechanisms
- Added comprehensive deployment documentation
- Created production environment template

Ready for production deployment!

--- a/railway.toml
+++ b/railway.toml
@@ -2,7 +2,7 @@
 builder = "nixpacks"
 
 [deploy]
-startCommand = "cd frontend && streamlit run app.py --server.port=$PORT --server.address=0.0.0.0"
+startCommand = "cd frontend && streamlit run app.py --server.port=$PORT --server.address=0.0.0.0 --server.headless=true --server.enableCORS=false --server.enableXsrfProtection=false"
 healthcheckPath = "/"
 healthcheckTimeout = 300
 restartPolicyType = "on_failure"
@@ -10,3 +10,4 @@ restartPolicyType = "on_failure"
 [env]
 # Frontend will be deployed on Railway
 BACKEND_URL = "https://yt-bot-backend-8302f5ba3275.herokuapp.com"
+NIXPACKS_PYTHON_VERSION = "3.11"
