--- a/frontend/Procfile
+++ b/frontend/Procfile
@@ -1,1 +1,1 @@
-web: ./start.sh
+web: streamlit run app.py --server.port=$PORT --server.address=0.0.0.0 --server.headless=true --server.enableCORS=false --server.enableXsrfProtection=false
