--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
+# Complete requirements for both frontend and backend
+# Frontend dependencies
 streamlit>=1.28.0
 requests>=2.31.0
+
+# Backend dependencies  
+fastapi>=0.104.0
+uvicorn>=0.23.0
+
+# Shared dependencies
 youtube-transcript-api>=0.6.1
 supabase==2.17.0
 beautifulsoup4>=4.13.0
@@ -8,3 +16,4 @@ openai>=1.3.0
 pydantic>=2.5.0
 pytz>=2023.3
 python-dotenv>=1.0.0
+apscheduler>=3.10.0
